# cat_in_dat_2

./: .gitignore  README.md  pyproject.toml
fi/: readme.md
fi_fig/: readme.md
log/: readme.md
oof/: readme.md
src/: utility.py
src/eda/: Basic_EDA.ipynb
src/modeling/: baseline_submission_1.ipynb  cat_baseline_with_ordered_ordinal.py  cat_baseline_with_ordered_ordinal_no_cat.py  cat_baseline_with_ordered_ordinal_no_default_cat_handling.py  cat_baseline_with_ordered_ordinal_use_cat_feature.py  lda_baseline_with_ordered_ordinal.py  lgbm_baseline_with_lexically_ordered_ordinal.py  lgbm_baseline_with_ordered_ordinal.py  lgbm_baseline_with_ordered_ordinal_use_cat_feature.py  lr_baseline_with_ordered_ordinal.py  stacking_baseline_with_lgbm_cat.ipynb  submission_2.ipynb  submission_2.py  xgb_baseline_with_ordered_ordinal.py
sub/: readme.md  submit_1.py  submit_2.py
tracking/: readme.md  tracking.csv
