[tool.poetry]
name = "catindat2"
version = "0.1.0"
description = ""
authors = ["repl.it user <replituser@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
feather-format = "^0.4.1"
lightgbm = "^2.3"
xgboost = "^1.1"
catboost = "^0.23.2"
pandas = "^1.0"
category-encoders = "^2.2"
plotly = "^4.8"
seaborn = "^0.10.1"
sklearn = "^0.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
